--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,14 +12,26 @@
           <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
-    <activity android:name="RecipeActivity" android:label="@string/app_name">
+    <activity android:name="RecipeActivity" android:label="@string/app_name" android:theme="@style/Theme.Sherlock.Light.DarkActionBar">
       <intent-filter>
-          <action android:name="android.intent.action.VIEW" />
+        <action android:name="android.intent.action.VIEW" />
       </intent-filter>
     </activity>
     <activity android:name="RecipeSearchActivity" android:label="@string/app_name" android:theme="@style/Theme.Sherlock.Light.DarkActionBar">
       <intent-filter>
           <action android:name="android.intent.action.VIEW" />
+      </intent-filter>
+    </activity>
+    <activity
+      android:name="com.dropbox.client2.android.AuthActivity"
+      android:launchMode="singleTask"
+      android:configChanges="orientation|keyboard">
+      <intent-filter>
+        <!-- Change this to be db- followed by your app key -->
+        <data android:scheme="db-qw5gcw6gry0qj39" />
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.BROWSABLE"/>
+        <category android:name="android.intent.category.DEFAULT" />
       </intent-filter>
     </activity>
   </application>
