--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,11 @@
           <action android:name="android.intent.action.VIEW" />
       </intent-filter>
     </activity>
+    <activity android:name="SettingsActivity" android:label="@string/app_name" android:theme="@style/Theme.Sherlock.Light.DarkActionBar">
+      <intent-filter>
+          <action android:name="android.intent.action.VIEW" />
+      </intent-filter>
+    </activity>
     <activity
       android:name="com.dropbox.client2.android.AuthActivity"
       android:launchMode="singleTask"
