--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,6 +16,11 @@
       <intent-filter>
         <action android:name="android.intent.action.VIEW" />
       </intent-filter>
+      <intent-filter>
+        <action android:name="android.intent.action.SEND" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <data android:mimeType="text/html" />
+      </intent-filter>
     </activity>
     <activity android:name="RecipeSearchActivity" android:label="@string/app_name" android:theme="@style/Theme.Sherlock.Light.DarkActionBar">
       <intent-filter>
