--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
   <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="15"/>
   <uses-permission android:name="android.permission.INTERNET" />
   <application android:label="@string/app_name" >
-    <activity android:name="RecipeListActivity" android:label="@string/app_name" android:theme="@style/Theme.Sherlock.Light.DarkActionBar">
+    <activity android:name="RecipeListActivity" android:label="@string/app_name" android:theme="@style/CookboxTheme">
       <intent-filter>
           <action android:name="android.intent.action.MAIN" />
           <category android:name="android.intent.category.LAUNCHER" />
@@ -19,7 +19,7 @@
       <intent-filter>
         <action android:name="android.intent.action.SEND" />
         <category android:name="android.intent.category.DEFAULT" />
-        <data android:mimeType="text/html" />
+        <data android:mimeType="text/plain" />
       </intent-filter>
     </activity>
     <activity android:name="RecipeSearchActivity" android:label="@string/app_name" android:theme="@style/Theme.Sherlock.Light.DarkActionBar">
