--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,7 @@
           <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
-    <activity android:name="RecipeActivity" android:label="@string/app_name" android:theme="@style/Theme.Sherlock.Light.DarkActionBar">
+    <activity android:name="RecipeActivity" android:label="@string/app_name" android:theme="@style/CookboxTheme">
       <intent-filter>
         <action android:name="android.intent.action.VIEW" />
       </intent-filter>
@@ -27,7 +27,7 @@
           <action android:name="android.intent.action.VIEW" />
       </intent-filter>
     </activity>
-    <activity android:name="SettingsActivity" android:label="@string/app_name" android:theme="@style/Theme.Sherlock.Light.DarkActionBar">
+    <activity android:name="SettingsActivity" android:label="@string/app_name" android:theme="@style/CookboxSettingsTheme">
       <intent-filter>
           <action android:name="android.intent.action.VIEW" />
       </intent-filter>
