--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,7 @@
   <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="15"/>
   <uses-permission android:name="android.permission.INTERNET" />
   <application android:label="@string/app_name" >
+    <service android:name=".RecipeStorageService" />
     <activity android:name="RecipeListActivity" android:label="@string/app_name" android:theme="@style/CookboxTheme">
       <intent-filter>
           <action android:name="android.intent.action.MAIN" />
